20051031 ide.c: improved IDE emulation for use with Demfir (Matthew
	 Westcott).
20051220 Makefile.am,libspectrum.c,libspectrum.h.in,tape.c,tape_block.[ch],
	 z80em.c: support for Z80Em and CSW files (patch #1357700)
	 (Darren).
20051224 autogen.sh: add --automake to libtoolize invocation (Markus
         Obermuller). Remove --copy on automake.
20060718 tape.c: add block description for RLE blocks (Fred).
20060812 libspectrum.h.in,tape_block.c,doc/libspectrum.txt: add
	 libspectrum_tape_block_metadata() function (needed to fix North
	 and South and Super Hang-On; see bug #1531346).
20070101 rzx.c: when rolling back, don't stop recording until we know
	 that the required snapshot exists.
20070102 tape.c,tape_block.[ch],tzx_read.c: stub support for TZX
	 "Generali[sz]ed Data" blocks (ID 0x19).
20070102 Makefile.am,internals.h,libspectrum.h.in,tape_accessors.{pl,txt},
	 tape_block.[ch], tape_set.pl, tzx_read.c: sufficient 0x19
	 functionality to allow tzxlist to do something with these blocks.
20070104 internals.h,libspectrum.h.in,symbol_table.c,tape_block.[ch],
	 tzx_read.c: next bit of 0x19 functionality.
20070104 libspectrum.h.in,symbol_table.c,tape_block.[ch]: symbol count of
	 0 => 256 symbols in table.
20070104 tzx_read.c: generalised data block pilot data comes before the
	 data symbol table.
20070104 tape_accessors.c,tape_block.h,tzx_read.c: read pilot data from
	 generalised data blocks.
20070104 Makefile.am,tape_accessors.txt,tape_block.h,tzx_read.c: read data
	 stream from generalised data blocks.
20070104 internals.h,tape_block.c,tzx_read.c: free generalised block data
	 on success (tested) and failure (not tested).
20070105 tape.c,tape_block.[ch]: start of playback code for generalised
	 data blocks.
20070105 tape.c,tape_accessors.txt,tape_block.h,tzx_read.c: more playback
	 code for generalised data blocks; handles symbol type 0 only.
20070106 libspectrum.h.in,tape.c: playback for other generalised data
	 symbol types.